fix button alignment

--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,10 @@
   object-fit: cover;
 }
 
+.btns-group {
+  text-align: center;
+}
+
 .button {
   width: 100%;
 
